# gargantua

./: .gitignore  CLAUDE.md  Cargo.toml
crates/gr-core/: Cargo.toml
crates/gr-core/src/: geodesic.rs  kerr.rs  lib.rs  metric.rs  schwarzschild.rs
crates/gr-renderer/: Cargo.toml
crates/gr-renderer/src/: lib.rs  main.rs
crates/gr-renderer/tests/: render_sanity.rs
crates/gr-tracer/: Cargo.toml
crates/gr-tracer/src/: camera.rs  disk.rs  lib.rs  main.rs  outcome.rs  ray.rs  tracer.rs
crates/gr-tracer/tests/: integration.rs
crates/gr_core/: Cargo.toml
crates/gr_renderer/: Cargo.toml
crates/gr_tracer/: Cargo.toml
crates/raytracer/: Cargo.toml
crates/raytracer/examples/: cornell_box.rs  curved_scene.rs  profile_curved.rs  profile_nee.rs
crates/raytracer/src/: lib.rs
crates/raytracer/src/accel/: bvh.rs  mod.rs
crates/raytracer/src/bdpt/: camera_path.rs  connection.rs  geometry.rs  light_path.rs  mis.rs  mod.rs  path.rs  renderer.rs  vertex.rs
crates/raytracer/src/camera/: mod.rs  perspective.rs  thin_lens.rs
crates/raytracer/src/core/: aabb.rs  color.rs  hit.rs  interval.rs  mod.rs  onb.rs  ray.rs  scatter.rs
crates/raytracer/src/curved/: camera.rs  mod.rs  outcome.rs  ray.rs  renderer.rs  sky.rs  tracer.rs
crates/raytracer/src/flat/: mod.rs  renderer.rs
crates/raytracer/src/material/: dielectric.rs  diffuse_light.rs  glossy.rs  lambertian.rs  metal.rs  mod.rs
crates/raytracer/src/output/: buffer.rs  mod.rs  postprocess.rs
crates/raytracer/src/pdf/: cosine.rs  hittable_pdf.rs  mixture_pdf.rs  mod.rs  sphere_pdf.rs  uniform_hemisphere.rs
crates/raytracer/src/scene/: light_list.rs  mod.rs  world.rs
crates/raytracer/src/shape/: constant_medium.rs  mod.rs  quad.rs  sphere.rs
docs/: architecture.md  future-work.md  log.md  notes.md  physics.md  setup.md  usage.md
