[package]
name = "relavistic-renderer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace]
resolver = "2"
members = [
    "crates/gr-core",
    "crates/gr-renderer",
    "crates/raytracer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors=[""]
license = ""


[workspace.dependencies]
nalgebra = "0.34.1"
num-complex = "0.4"
num-traits = "0.2"
serde = "1.0.228"
rayon = "1.10"
thiserror = "2"
rand = "0.8"
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
indicatif = { version = "0.17", features = ["rayon"] }

# Internal crates
gr-core = { path = "crates/gr-core" }
gr-renderer = { path = "crates/gr-renderer" }

[profile.release]
debug = "line-tables-only"
