[package]
name = "gr-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core grid, field, and operator infrastructure for unified physics simulation"

[dependencies]
nalgebra.workspace = true
num-traits.workspace = true
num-complex.workspace = true
rayon.workspace = true
thiserror.workspace = true
