[package]
name = "gr-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = ""

[dependencies]
nalgebra.workspace = true
rayon.workspace = true
image.workspace = true
clap.workspace = true
indicatif.workspace = true
gr-core.workspace = true
gr-tracer.workspace = true

