[package]
name = "gr-tracer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = ""

[dependencies]
nalgebra.workspace = true
num-traits.workspace = true
num-complex.workspace = true
rayon.workspace = true
rand.workspace = true
gr-core.workspace = true
