[package]
name = "raytracer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Ray tracing library for flat and curved spacetime"

[features]
default = ["flat"]
flat = []
curved = ["dep:gr-core", "dep:indicatif"]

[dependencies]
nalgebra.workspace = true
rayon.workspace = true
rand.workspace = true
image.workspace = true
# Portable SIMD wrapper — used in the hot AABB intersection path.
wide = "0.7"
gr-core = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }

[dev-dependencies]
approx = "0.5"
